# wrangle

./: Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.agents/plugins/: marketplace.json
.codex/: wrangle.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/wrangle-backends-api/: Cargo.toml
crates/wrangle-backends-api/src/: lib.rs
crates/wrangle-backends-cli/: Cargo.toml
crates/wrangle-backends-cli/src/: lib.rs
crates/wrangle-cli/: Cargo.toml
crates/wrangle-cli/src/: main.rs
crates/wrangle-cli/tests/: cli.rs  parallel.rs  quiet_progress.rs
crates/wrangle-core/: Cargo.toml
crates/wrangle-core/src/: agent_config.rs  config.rs  errors.rs  lib.rs  project_config.rs  protocol.rs  task_graph.rs
crates/wrangle-runner/: Cargo.toml
crates/wrangle-runner/src/: lib.rs
crates/wrangle-server/: Cargo.toml
crates/wrangle-server/src/: lib.rs
crates/wrangle-transport/: Cargo.toml
crates/wrangle-transport/src/: lib.rs  parser.rs  persistent.rs  server.rs  signal.rs  subprocess.rs
docs/: api-backed-backends.md  codeagent-wrapper-rs-security-review.md  persistent-backend.md  project-config.md  provenance.md  qwen-write-access.md  release-checklist.md  roadmap.md  runner-api.md  security-model.md  troubleshooting.md  wrangle-server.md
docs/plugins/: wrangle-codex.md
plugins/wrangle-codex/.codex-plugin/: plugin.json
plugins/wrangle-codex/scripts/: run_wrangle.py
plugins/wrangle-codex/skills/use-wrangle/: SKILL.md
plugins/wrangle-codex/tests/: test_run_wrangle.py
resources/codewrapper-agent-rs/: CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
resources/codewrapper-agent-rs/src/: agent_config.rs  backend.rs  executor.rs  main.rs
