[package]
name = "wrangle-backends-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
wrangle-core = { path = "../wrangle-core" }
