[package]
name = "wrangle-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "wrangle"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wrangle-server = { path = "../wrangle-server" }
wrangle-backends-cli = { path = "../wrangle-backends-cli" }
wrangle-core = { path = "../wrangle-core" }
wrangle-runner = { path = "../wrangle-runner" }
wrangle-transport = { path = "../wrangle-transport" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
