[package]
name = "wrangle-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wrangle-backends-cli = { path = "../wrangle-backends-cli" }
wrangle-core = { path = "../wrangle-core" }
wrangle-transport = { path = "../wrangle-transport" }

